# FastAPIContactManagement

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 21fb3f0015a4_psyco.py  2ff819f4066b_new_migration.py  6d83b5cceb7d_psycouser.py  e7172c95a0c3_psycoblahblah.py
docs/: conf.py  index.rst
src/: schemas.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: contacts.py  dates.py  users.py
src/services/: auth.py  email.py
src/services/templates/: email_recovery_template.html  email_template.html
tests/: conftest.py  test_routes_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
